assets/css/main.css
/* ... */
.tp-about-two-para {
  font-family: var(--tp-ff-onest);
  font-size: 24px;
  line-height: 1.4;
  letter-spacing: -0.02em;
}
@media only screen and (min-width: 992px) and (max-width: 1199px) {
  .tp-about-two-para {
    font-size: 22px;
  }
}
.tp-about-two-item {
  border-bottom: 1px solid rgba(20, 20, 20, 0.14);
  padding-bottom: 9px;
}
@media (max-width: 575px) {
  .tp-about-two-item {
    margin-left: 0;
  }
}
.tp-about-two-item span {
  margin-right: 15px;
}
.tp-about-two-item p {
  font-family: var(--tp-ff-onest);
  font-weight: 500;
  font-size: 18px;
  line-height: 1.2;
  letter-spacing: -0.02em;
  color: var(--tp-common-black);
}
@media only screen and (min-width: 576px) and (max-width: 767px) {
  .tp-about-two-content {
    padding-top: 40px;
  }
}
@media (max-width: 575px) {
  .tp-about-two-content {
    padding-top: 20px;
  }
}
.tp-about-3-content {
  padding-top: 110px;
}
@media only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), (max-width: 575px) {
  .tp-about-3-content {
    padding-top: 0;
    margin-bottom: 40px;
  }
}
.tp-about-3-para {
  font-family: var(--tp-ff-onest);
  font-weight: 400;
  font-size: 18px;
  line-height: 167%;
  color: var(--tp-grey-4);
}
@media only screen and (min-width: 576px) and (max-width: 767px), (max-width: 575px) {
  .tp-about-3-para br {
    display: none;
  }
}
.tp-about-3-thumb {
  padding-right: 185px;
  width: 100%;
  transform: translateX(-24px);
}
@media only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), (max-width: 575px) {
  .tp-about-3-thumb {
    transform: translateX(0);
  }
}
@media (max-width: 575px) {
  .tp-about-3-thumb {
    padding-right: 0;
  }
}
.tp-about-3-thumb-2 {
  right: 0;
  position: absolute;
  bottom: -40px;
}
.tp-about-top-subtitle {
  font-family: var(--tp-ff-playfair);
  font-weight: 500;
  font-size: 18px;
  color: var(--tp-common-falured);
  margin-bottom: 12px;
}
.tp-about-top-subtitle span {
  border-radius: 100px;
  display: inline-block;
  width: 10px;
  height: 10px;
  background: var(--tp-common-falured);
  margin-right: 8px;
}
.tp-about-top-title {
  font-family: var(--tp-ff-playfair);
  font-weight: 700;
  font-size: 80px;
  line-height: 1.05;
  color: var(--tp-common-black4);
}
@media only screen and (min-width: 992px) and (max-width: 1199px), only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), (max-width: 575px) {
  .tp-about-top-title {
    font-size: 70px;
  }
  .tp-about-top-title br {
    display: none;
  }
}
@media only screen and (min-width: 576px) and (max-width: 767px), (max-width: 575px) {
  .tp-about-top-title {
    font-size: 50px;
  }
}
.tp-about-top-title-2 {
  font-size: 60px;
}
@media only screen and (min-width: 576px) and (max-width: 767px), (max-width: 575px) {
  .tp-about-top-title-2 {
    font-size: 45px;
  }
}
.tp-about-top-title span {
  font-style: italic;
  color: var(--tp-common-falured);
}
.tp-about-top-logo {
  display: inline-block;
}
.tp-about-top-logo-content {
  padding-left: 100px;
}
@media only screen and (min-width: 992px) and (max-width: 1199px), only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), (max-width: 575px) {
  .tp-about-top-logo-content {
    padding-left: 0;
  }
}
.tp-about-top-logo-content p {
  font-family: var(--tp-ff-onest);
  line-height: 24px;
  color: var(--tp-grey-5);
}
.tp-about-top-logo .shape {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  left: 0;
  right: 0;
  margin: 0 auto;
}
.tp-about-4-shape img {
  mix-blend-mode: hard-light;
}
.tp-about-4-content {
  padding-left: 100px;
}
@media only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), (max-width: 575px) {
  .tp-about-4-content {
    padding-left: 0;
  }
}
.tp-about-4-content p {
  font-family: var(--tp-ff-onest);
  line-height: 24px;
  color: var(--tp-grey-5);
}
@media only screen and (min-width: 1200px) and (max-width: 1399px), only screen and (min-width: 992px) and (max-width: 1199px), only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), (max-width: 575px) {
  .tp-about-4-content p br {
    display: none;
  }
}
@media only screen and (min-width: 992px) and (max-width: 1199px), only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), (max-width: 575px) {
  .tp-about-4-content p {
    margin-bottom: 40px;
  }
}
.tp-about-4-client-wrap {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
}
.tp-about-4-client-img {
  margin-right: 12px;
}
.tp-about-4-client-review p {
  font-family: var(--tp-ff-onest);
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  color: var(--tp-common-black4);
  margin-bottom: 0;
}
.tp-about-4-expreance {
  display: inline-block;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  right: -87px;
}
@media only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), (max-width: 575px) {
  .tp-about-4-expreance {
    top: 10%;
    right: 0;
  }
}
.tp-about-4-expreance-content {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  left: 0;
  right: 0;
}
.tp-about-4-expreance-year {
  font-family: var(--tp-ff-onest);
  font-weight: 600;
  font-size: 14px;
  line-height: 17px;
  color: var(--tp-common-white);
  display: inline-block;
}
.tp-about-hotel-border {
  border: 1px solid rgba(160, 89, 22, 0.14);
}
@media only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), (max-width: 575px) {
  .tp-about-hotel-border {
    border: none;
  }
}
/* ... */

